# crasp

./: .gitignore
crasp/: pyproject.toml  requirements.txt
crasp/configs/: base_config.yaml
crasp/data/calibration/: cot_calibration.jsonl  safety_calibration.jsonl
crasp/data/raw/medhalt/reasoning_FCT/train/: dataset_info.json  state.json
crasp/data/raw/medhalt/reasoning_fake/train/: data-00000-of-00001.arrow  dataset_info.json  state.json
crasp/data/raw/medqa/test/: state.json
crasp/data/raw/medqa/train/: dataset_info.json  state.json
crasp/results/baselines/: raw_meta-llama_Llama-2-7b-hf_20260309T203226Z.json  raw_meta-llama_Llama-3.1-8B_20260309T204358Z.json
crasp/results/sparsegpt/: sparsegpt_cot_sp20_meta-llama_Llama-3.1-8B_20260313T152001Z.json  sparsegpt_cot_sp25_meta-llama_Llama-3.1-8B_20260313T152001Z.json  sparsegpt_cot_sp30_meta-llama_Llama-3.1-8B_20260313T152001Z.json  summary_meta-llama_Llama-3.1-8B_20260313T152001Z.json
crasp/results/wanda/: summary_meta-llama_Llama-3.1-8B_20260313T124959Z.json  summary_meta-llama_Llama-3.1-8B_20260313T130446Z.json  wanda_cot_sp20_meta-llama_Llama-3.1-8B_20260313T124959Z.json  wanda_cot_sp20_meta-llama_Llama-3.1-8B_20260313T130446Z.json  wanda_cot_sp25_meta-llama_Llama-3.1-8B_20260313T130446Z.json  wanda_cot_sp30_meta-llama_Llama-3.1-8B_20260313T130446Z.json
crasp/scripts/: download_data.py  generate_cot_dataset.py  generate_safety_dataset.py  run_baselines.py  run_llmpruner.py  run_sparsegpt.py  run_wanda.py
crasp/src/: __init__.py  eval_harness.py  metrics.py  sparsegpt_loader.py  wanda_loader.py
(+2 files in other folders)
