[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "crasp"
version = "0.1.0"
description = "Clinical Reasoning-Aware Structured Pruning for medical LLMs"
requires-python = ">=3.10"
readme = "README.md"
license = { text = "MIT" }

dependencies = [
    "torch==2.2.0",
    "transformers==4.44.0",
    "accelerate==0.33.0",
    "peft==0.12.0",
    "bitsandbytes==0.43.0",
    "datasets==2.20.0",
    "lm-eval==0.4.3",
    "jsonlines>=4.0.0",
    "pyyaml>=6.0",
    "scipy>=1.11.0",
    "scikit-learn>=1.3.0",
    "pandas>=2.1.0",
    "numpy>=1.26.0",
    "matplotlib>=3.8.0",
    "seaborn>=0.13.0",
    "tqdm>=4.66.0",
    "wandb>=0.16.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "black>=23.0",
    "ruff>=0.1.0",
    "mypy>=1.5",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["crasp*", "src*"]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.ruff]
line-length = 100
select = ["E", "F", "I"]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
